common-applications/om/om-webserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/query/company/(.*)      https://dsapi.osinfra.cn/query/company/$1 redirect;
  name: om-webserver-ingress
spec:
  tls:
    - hosts:
        - omapi.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: omapi.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: om-webserver-service
              servicePort: 80
            path: /
